# NSLAudioToolbox

./: .gitignore  README.md  cochba_py_processed.csv  convert_cochba.ipynb  convert_csv2npz.py  main.py  pyproject.toml  pytest.ini  setup.py  tutorial1.ipynb
aud_math/: sigmoid.py
src/: wav2aud_zpk.py
src/audio_toolbox/: aud2cor.py  wav2aud_zpk.py
src/audio_toolbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/audio_toolbox/utils/: cochba_filters.npz  mathfuncs.py
src/unit_tests/: wav2aud_tests.py
src/unit_tests/matlab_outputs/: 10030hz.csv  12032hz.csv  14034hz.csv  16036hz.csv  18038hz.csv  2022hz.csv  20hz.csv  4024hz.csv  6026hz.csv  8028hz.csv  CT_cut.csv  CW_cut.csv  GR_cut.csv  GT_cut.csv  GW_cut.csv  PR_cut.csv  PT_cut.csv  PW_cut.csv  SR_cut.csv  ST_cut.csv  SW_cut.csv  gains_from_matlab.csv  geese_nps_res.csv  poles_from_matlab.csv  robin_nps.csv  speech_cut.csv  step.csv  zeros_from_matlab.csv
tutorials/: tutorial1.ipynb
unit_tests/: wav2aud_tests.py
