[build-system]

requires = ["setuptools >= 61.0.0"]

build-backend = "setuptools.build_meta"
 
[tool.setuptools]

package-dir = {"" = "src"}
 
[tool.setuptools.packages.find]

where = ["src"]
 
[project]

name = "audio_toolbox"

version = "0.0.1"

authors = [

  { name="C L Nina Matos" },

]

description = "A library for bio-inspired sound processing."

readme = "README.md"

requires-python = ">=3.11"

license = { text = "MIT" }

classifiers = [

    "Programming Language :: Python :: 3.11",

    "License :: OSI Approved :: MIT License",

    "Operating System :: OS Independent",

]
 
 
dependencies = [

    "numpy >= 2.4.0",

]
 
[project.optional-dependencies]

build = [

  "build<0.10.0",
  "twine"

]

docs = [

    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.3",

]

tutorials = [

  "jupyter",
  "matplotlib >= 3.10.8"
]

[project.urls]

"Homepage" = "https://pypi.org/project/audio_toolbox/"

"Bug Tracker" = "https://github.com/ninocapipoca/NSLAudioToolbox"
 